--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>John Doe - Resume</title>
+    <title>Burçak Aydın - Resume</title>
     <link rel="stylesheet" href="css/style.css">
 
   </head>
@@ -13,8 +13,8 @@
     <div class="header">
       <div class="title">
         <span></span>
-        <h2>John Doe</h2>
-        <i>Web Developer</i>
+        <h2>Burçak Aydın</h2>
+        <i>Data Scientist</i>
       </div>
 
       <div class="menu">
