--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>John Doe - Resume</title>
+    <title>Burçak Aydın - Resume</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -45,28 +45,22 @@
     <!-- PAGE CONTENT -->
 
     <!-- PAGE FOOTER -->
-    <div class="footer">
-      <div>
-        <h3>Phone</h3>
-        <p><a href="tel:+15555555555">+1 555 555 55 55</a></p>
-      </div>
-
       <div>
         <h3>Email</h3>
-        <p><a href="mailto:john@doe.com">john@doe.com</a></p>
+        <p><a href="mailto:burcakgonulaydin@gmail.com">burcakgonulaydin@gmail.com</a></p>
       </div>
 
       <div>
         <h3>Follow Me</h3>
         <p>
-          <a href="http://linkedin.com/johndoe" target="_blank">Linkedin</a> |
-          <a href="http://twitter.com/johndoe" target="_blank">Twitter</a>
+          <a href="https://www.linkedin.com/in/bur%C3%A7ak-ayd%C4%B1n-553510123" target="_blank">Linkedin</a> |
+          <a href="http://twitter.com/burcakaydin03" target="_blank">Twitter</a>
         </p>
       </div>
 
       <div>
         <h3>Copyright</h3>
-        <p>2022 - John Doe</p>
+        <p>2023 - Burçak Aydın</p>
       </div>
     </div>
     <!-- PAGE FOOTER -->
