--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>John Doe - Resume</title>
+    <title>Burçak Aydın - Resume</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -12,8 +12,8 @@
     <div class="header">
       <div class="title">
         <span></span>
-        <h2>John Doe</h2>
-        <i>Web Developer</i>
+        <h2>Burçak Aydın</h2>
+        <i>Data Scientist</i>
       </div>
 
       <div class="menu">
@@ -33,7 +33,8 @@
 
         <div class="card">
           <div class="left">
-            Skilled in Educational Technology Design, Mobile Applicaiton Design.
+            Skilled in Educational Technology Design and Mobile Application
+            Design.
           </div>
         </div>
       </div>
@@ -50,90 +51,93 @@
             <i>Design Teacher | 2019 - Present</i>
           </div>
           <div class="right">
-            Designed student-friendly instructional materials.
+            Designed graphic-based Python programming lessons and
+            student-friendly instructional materials.
+          </div>
+
+          <!-- WORK EXPERIENCE -->
+
+          <!-- EDUCATION -->
+          <div class="section">
+            <h2>Education</h2>
+
+            <div class="card">
+              <div class="left">
+                <h2>Hacettepe University</h2>
+                <i
+                  >Computer Educationa and Instructional Teachnology Ph.D.
+                  Student| 2020 - present</i
+                >
+              </div>
+              <div class="right">
+                Studied computer basics, computer education, instructional
+                technology, promramming basics, object oriented programming.
+              </div>
+            </div>
+          </div>
+          <!-- EDUCATION -->
+
+          <!-- COURSES -->
+          <div class="section">
+            <h2>Courses</h2>
+
+            <div class="card">
+              <div class="left">
+                <h2>Techproeducation</h2>
+                <i>Data Science Bootcamp | 2023</i>
+              </div>
+              <div class="right">
+                Studied HTML, CSS, Javascript, Python, Tableau, Power BI
+              </div>
+            </div>
+            <div class="card">
+              <div class="left">
+                <h2>XD Design</h2>
+                <i>2019</i>
+              </div>
+              <div class="right">
+                Studied design principle and XD tools. Created a mobile
+                application on mosaic museum.
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="left">
+              <h2>R Programming</h2>
+              <i>2019</i>
+            </div>
+            <div class="right">
+              Studied advanced R programmimg and created capstone project on
+              secondary year students' success based on national exam results.
+            </div>
           </div>
         </div>
 
-      <!-- WORK EXPERIENCE -->
+        <!-- COURSES -->
 
-      <!-- EDUCATION -->
-      <div class="section">
-        <h2>Education</h2>
+        <!-- TECHNICAL SKILLS -->
+        <div class="section">
+          <h2>Technical Skills</h2>
 
-        <div class="card">
-          <div class="left">
-            <h2>Hacettepe University</h2>
-            <i>Computer Educationa and Instructional Teachnology Ph.D. Student| 2020 - present</i>
+          <div class="card">
+            <div class="left">
+              <h2>Programming languages</h2>
+            </div>
+            <div class="right">R, Python</div>
           </div>
-          <div class="right">
-            Studied computer basics, computer education, instructional technology, promramming basics, object oriented programing
+
+          <div class="card">
+            <div class="left">
+              <h2>Tools, Apps, Platforms</h2>
+            </div>
+            <div class="right">VsCode, MySql, Tableau, Power BI</div>
           </div>
         </div>
+        <!-- TECHNICAL SKILLS -->
       </div>
-      <!-- EDUCATION -->
+      <!-- PAGE CONTENT -->
 
-      <!-- COURSES -->
-      <div class="section">
-        <h2>Courses</h2>
-
-        <div class="card">
-          <div class="left">
-            <h2>Techproeducation</h2>
-            <i>Data Science Bootcamp | 2023</i>
-          </div>
-          <div class="right">
-            Studied HTML, CSS, Javascript, Python, Tableau, Power BI
-          </div>
-        </div>
-        <div class="card">
-          <div class="left">
-            <h2>XD Design</h2>
-            <i>2019</i>
-          </div>
-          <div class="right">
-            Studied design principle and XD tools. Created a mobile application on mosaic museum.
-          </div>
-        </div>
-      </div>
-        <div class="card">
-          <div class="left">
-            <h2>R Programming</h2>
-            <i>2019</i>
-          </div>
-          <div class="right">
-            Studied advanced R programmimg and created capstone 
-            project on secondary year students' success based on national exam results.
-          </div>
-        </div>
-      </div>
-
-      <!-- COURSES -->
-
-      <!-- TECHNICAL SKILLS -->
-      <div class="section">
-        <h2>Technical Skills</h2>
-
-        <div class="card">
-          <div class="left">
-            <h2>Programming languages</h2>
-          </div>
-          <div class="right">
-            R, Python
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="left">
-            <h2>Tools, Apps, Platforms</h2>
-          </div>
-          <div class="right">VsCode, MySql, Tableau, Power BI</div>
-        </div>
-      </div>
-      <!-- TECHNICAL SKILLS -->
-    </div>
-    <!-- PAGE CONTENT -->
-
-    <!-- PAGE FOOTER -->
+      <!-- PAGE FOOTER -->
 
       <div>
         <h3>Email</h3>
