--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
       <div class="about">
         <div class="my-photo">
           <img
-            src="img/pexels-moose-photos-1586996.jpg"
+            src="me.jpg"
             alt="Burçak Aydın - Kişisel fotoğrafım"
           />
         </div>
         <div class="description">
-          <h1>John Doe</h1>
+          <h1>Burçak Aydın</h1>
           <p>I'm a data scientist.</p>
           <div class="toolbar">
             <a href="resume.html">Resume</a><a href="contact.html">Contact</a>
