--- a/resume.html
+++ b/resume.html
@@ -90,6 +90,7 @@
                 Studied HTML, CSS, Javascript, Python, Tableau, Power BI
               </div>
             </div>
+
             <div class="card">
               <div class="left">
                 <h2>XD Design</h2>
@@ -101,6 +102,7 @@
               </div>
             </div>
           </div>
+
           <div class="card">
             <div class="left">
               <h2>R Programming</h2>
@@ -108,7 +110,7 @@
             </div>
             <div class="right">
               Studied advanced R programmimg and created capstone project on
-              secondary year students' success based on national exam results.
+              year students' success based on national exam results.
             </div>
           </div>
         </div>
