--- a/resume.html
+++ b/resume.html
@@ -47,100 +47,87 @@
 
         <div class="card">
           <div class="left">
-            <h2>Design</h2>
+            <h2>Design Technology</h2>
             <i>Design Teacher | 2019 - Present</i>
           </div>
           <div class="right">
             Designed graphic-based Python programming lessons and
             student-friendly instructional materials.
           </div>
-
-          <!-- WORK EXPERIENCE -->
-
-          <!-- EDUCATION -->
-          <div class="section">
-            <h2>Education</h2>
-
-            <div class="card">
-              <div class="left">
-                <h2>Hacettepe University</h2>
-                <i
-                  >Computer Educationa and Instructional Teachnology Ph.D.
-                  Student| 2020 - present</i
-                >
-              </div>
-              <div class="right">
-                Studied computer basics, computer education, instructional
-                technology, promramming basics, object oriented programming.
-              </div>
-            </div>
-          </div>
-          <!-- EDUCATION -->
-
-          <!-- COURSES -->
-          <div class="section">
-            <h2>Courses</h2>
-
-            <div class="card">
-              <div class="left">
-                <h2>Techproeducation</h2>
-                <i>Data Science Bootcamp | 2023</i>
-              </div>
-              <div class="right">
-                Studied HTML, CSS, Javascript, Python, Tableau, Power BI
-              </div>
-            </div>
-
-            <div class="card">
-              <div class="left">
-                <h2>XD Design</h2>
-                <i>2019</i>
-              </div>
-              <div class="right">
-                Studied design principle and XD tools. Created a mobile
-                application on mosaic museum.
-              </div>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="left">
-              <h2>R Programming</h2>
-              <i>2019</i>
-            </div>
-            <div class="right">
-              Studied advanced R programmimg and created capstone project on
-              year students' success based on national exam results.
-            </div>
-          </div>
         </div>
-
-        <!-- COURSES -->
-
-        <!-- TECHNICAL SKILLS -->
-        <div class="section">
-          <h2>Technical Skills</h2>
-
-          <div class="card">
-            <div class="left">
-              <h2>Programming languages</h2>
-            </div>
-            <div class="right">R, Python</div>
-          </div>
-
-          <div class="card">
-            <div class="left">
-              <h2>Tools, Apps, Platforms</h2>
-            </div>
-            <div class="right">VsCode, MySql, Tableau, Power BI</div>
-          </div>
-        </div>
-        <!-- TECHNICAL SKILLS -->
       </div>
-      <!-- PAGE CONTENT -->
+      <!-- WORK EXPERIENCE -->
 
-      <!-- PAGE FOOTER -->
+      <!-- EDUCATION -->
+      <div class="section">
+        <h2>Education</h2>
 
+        <div class="card">
+          <div class="left">
+            <h2>Hacettepe University</h2>
+            <i> Computer Sciences | 2020 - present</i>
+          </div>
+          <div class="right">
+            Studied computer basics, computer education, instructional
+            technology, promramming basics, object oriented programming. Working
+            on data storrytelling and data literacy.
+          </div>
+        </div>
+      </div>
+      <!-- EDUCATION -->
+
+      <!-- COURSES -->
+      <div class="section">
+        <h2>Courses</h2>
+
+        <div class="card">
+          <div class="left">
+            <h2>Techproeducation</h2>
+            <i>Data Science Bootcamp | 2022</i>
+          </div>
+          <div class="right">
+            Studied HTML, CSS, Javascript, Python, Tableau, Power BI
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="left">
+            <h2>R Programming Course</h2>
+            <i>2021</i>
+          </div>
+          <div class="right">
+            Studied advanced R programmimg and created capstone project on
+            secondary year students' success based on national exam results.
+          </div>
+        </div>
+      </div>
+
+      <!-- COURSES -->
+
+      <!-- TECHNICAL SKILLS -->
+      <div class="section">
+        <h2>Technical Skills</h2>
+
+        <div class="card">
+          <div class="left">
+            <h2>Programming languages</h2>
+          </div>
+          <div class="right">R, Python</div>
+        </div>
+
+        <div class="card">
+          <div class="left">
+            <h2>Tools, Apps, Platforms</h2>
+          </div>
+          <div class="right">VsCode, MySql, Tableau, Power BI</div>
+        </div>
+      </div>
+      <!-- TECHNICAL SKILLS -->
+    </div>
+    <!-- PAGE CONTENT -->
+
+    <!-- PAGE FOOTER -->
+    <div class="footer">
       <div>
         <h3>Email</h3>
         <p>burcakgonulaydin@gmail.com</p>
@@ -148,7 +135,7 @@
 
       <div>
         <h3>Follow Me</h3>
-        <p>Linkedin</p>
+        <p>Linkedin | Twitter</p>
       </div>
 
       <div>
