--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="my-photo">
           <img
             src="me.jpg"
-            alt="Burçak Aydın - Kişisel fotoğrafım"
+            alt="Burçak Aydın - Personal Picture"
           />
         </div>
         <div class="description">
