--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="about">
         <div class="my-photo">
           <img
-            src="me.jpg"
+            src="img/me.jpg"
             alt="Burçak Aydın - Personal Picture"
           />
         </div>
