--- a/resume.html
+++ b/resume.html
@@ -82,16 +82,6 @@
 
         <div class="card">
           <div class="left">
-            <h2>Techproeducation</h2>
-            <i>Data Science Bootcamp | 2022</i>
-          </div>
-          <div class="right">
-            Studied HTML, CSS, Javascript, Python, Tableau, Power BI
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="left">
             <h2>R Programming Course</h2>
             <i>2021</i>
           </div>
@@ -103,6 +93,34 @@
       </div>
 
       <!-- COURSES -->
+
+      <!-- CERTIFICATES -->
+      <div class="section">
+        <h2>Courses</h2>
+
+        <div class="card">
+          <div class="left">
+            <h2>IBM DATA SCIENCE</h2>
+            <i>Data Science Specialization | 2023</i>
+          </div>
+          <div class="right">
+            Studied SQL, Python, Data Visualization, and Data Storytelling
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="left">
+            <h2>GOOGLE DATA ANALYTICS</h2>
+            <i>Data Analytics Specialization | 2023</i>
+          </div>
+          <div class="right">
+            Studied Google Sheets for data manipulation, SQL, BigQuery,
+            advanced R programmimg and created capstone projects.
+          </div>
+        </div>
+      </div>
+
+      <!-- CERTIFICATES -->
 
       <!-- TECHNICAL SKILLS -->
       <div class="section">
