--- a/resume.html
+++ b/resume.html
@@ -100,7 +100,7 @@
 
         <div class="card">
           <div class="left">
-            <h2>IBM DATA SCIENCE</h2>
+            <h2>IBM Data Science</h2>
             <i>Data Science Specialization | 2023</i>
           </div>
           <div class="right">
@@ -110,7 +110,7 @@
 
         <div class="card">
           <div class="left">
-            <h2>GOOGLE DATA ANALYTICS</h2>
+            <h2>GOOGLE Data Analytics</h2>
             <i>Data Analytics Specialization | 2023</i>
           </div>
           <div class="right">
