--- a/resume.html
+++ b/resume.html
@@ -96,7 +96,7 @@
 
       <!-- CERTIFICATES -->
       <div class="section">
-        <h2>Courses</h2>
+        <h2>Certificates</h2>
 
         <div class="card">
           <div class="left">
