--- a/resume.html
+++ b/resume.html
@@ -110,7 +110,7 @@
 
         <div class="card">
           <div class="left">
-            <h2>GOOGLE Data Analytics</h2>
+            <h2>Google Data Analytics</h2>
             <i>Data Analytics Specialization | 2023</i>
           </div>
           <div class="right">
