--- a/resume.html
+++ b/resume.html
@@ -104,7 +104,7 @@
             <i>Data Science Specialization | 2023</i>
           </div>
           <div class="right">
-            Studied SQL, Python, Data Visualization, and Data Storytelling
+            Studied SQL, Python, Data Visualization, Data Storytelling, Capstone based on SpaceX Launch Data
           </div>
         </div>
 
